--- a/content/_landing/404_zh.md
+++ b/content/_landing/404_zh.md
@@ -1,7 +1,7 @@
 ---
 layout: not_found
 title: 该页已不存在。
-permalink: /zh/404.html  
+permalink: /zh/404.html
 sitemap: false
 ---
 
@@ -9,7 +9,7 @@ sitemap: false
   <div class="cover-container">
     <div class="masthead clearfix">
       <div class="inner">
-        <a href="/"><img src="{{ '/assets/img/logo-white.svg' | prepend: site.baseurl}}" width="150" alt="Login.gov logo" class='masthead-brand'/></a>
+        <a href="/zh/"><img src="{{ '/assets/img/logo-white.svg' | prepend: site.baseurl}}" width="150" alt="Login.gov logo" class='masthead-brand'/></a>
       </div>
     </div>
     <div class="inner cover">
@@ -21,9 +21,9 @@ sitemap: false
       </p>
     </div>
     <ul>
-      <li><a href="{{ site.baseurl }}/">主页</a></li>
+      <li><a href="{{ site.baseurl }}/zh/">主页</a></li>
       <li><a href="{{ site.baseurl }}/partners/">伙伴</a></li>
-      <li><a href="{{ site.baseurl }}/help/">帮助中心</a></li>
+      <li><a href="{{ site.baseurl }}/zh/help/">帮助中心</a></li>
     </ul>
   </div>
 </div>
